--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <title>Sariot Hossain</title>
+    <title>ELEMENTOR</title>
 </head>
 <body>
     <!-- NAVBAR START  -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light text-secondary fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#"><span class="text-warning">SARI</span>OT</a>
+          <a class="navbar-brand" href="#"><span class="text-warning">ELEMEN</span>TOR</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"><i class="bi bi-text-center"></i></span>
           </button>
