--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <title>ELEMENTOR</title>
 </head>
 <body>
+  
     <!-- NAVBAR START  -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light text-secondary fixed-top">
         <div class="container">
@@ -39,12 +40,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="#contact">contact</a>
               </li>
-              
             </ul>
           </div>
         </div>
       </nav>
     <!-- NAVBAR END  -->
+
     <!-- HERO SECTION START  -->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -89,10 +90,6 @@
     </div>
     <!-- HERO SECTION END  -->
 
-
-
-
-
     <!-- ABOUT SECTION START  -->
     <section id="about" class="about section-padding">
       <div class="container">
@@ -113,7 +110,6 @@
       </div>
     </section>
     <!-- ABOUT SECTION END  -->
-
 
     <!-- SERVICE SECTION START  -->
     <section id="service" class="service section-padding">
@@ -162,7 +158,6 @@
       </div>
     </section>
     <!-- SERVICE SECTION END  -->
-
 
     <!-- PORTFOLIO SECTION START  -->
     <section id="portfolio" class="portfolio section-padding">
@@ -306,8 +301,8 @@
         <div class="row">
           <div class="col-md-12">
             <div class="section-header text-center pb-5">
-              <h2>Contact Us</h2>
-              <p>Lorem ipsum dolor sit <br> amet consectetur adipisicing elit.</p>
+              <h2><span class="text-warning">Contact</span> Us</h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing.<br>consectetur adipisicing elit.</p>
             </div>
           </div>
         </div>
@@ -327,7 +322,7 @@
                 </div>
                 <div class="col-md-12">
                   <div class="mb-3">
-                    <textarea class="form-control" rows="5" required placeholder="Enter query here" > </textarea>
+                    <textarea placeholder="Enter query here" class="form-control" rows="5" required  > </textarea>
                   </div>
                 </div>
                 <button class="btn btn-warning btn-lg btn block mt-3">Send Now</button>
@@ -345,7 +340,6 @@
     </footer>
     <!--FOOTER SECTION END  -->
 
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
