--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <title>ELEMENTOR</title>
@@ -57,25 +59,25 @@
         <div class="carousel-item active">
           <img src="../Image/banner01.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption ">
-            <h5>You dream hourse</h5>
+            <h5 >You Dream hourse</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sed ab ad, ullam quos rerum.</p>
-            <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
+            <p ><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="../Image/banner02.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption ">
-            <h5>You dream hourse</h5>
+            <h5 >You Dream hourse</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sed ab ad, ullam quos rerum.</p>
-            <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
+            <p ><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../Image/banner03.webp" class="d-block w-100" alt="...">
+          <img src="../Image/banner03.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption ">
-            <h5>You dream hourse</h5>
+            <h5 >Our Dream Mosque</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sed ab ad, ullam quos rerum.</p>
-            <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
+            <p ><a href="#" class="btn btn-warning mt-3">Learn More</a></p>
           </div>
         </div>
       </div>
@@ -94,15 +96,19 @@
     <section id="about" class="about section-padding">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-md-12 col-12">
-            <div class="about-img mt-4">
-              <img src="../Image/about.jpg" alt="" class="img-fluid">
+          <div class="section-header text-center pb-2">
+            <h2 class="text-center"><span class="text-warning">Abouts </span> Us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae doloribus <br> quia aperiam, voluptatibus laudantium corporis.</p>
+          </div>
+          <div class="col-lg-5 col-md-12 col-12">
+            <div class="about-img ">
+              <img src="../Image/about02.png" alt="" class="img-fluid">
             </div>
           </div>
-          <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-4">
+          <div class="col-lg-7 col-md-12 col-12 ps-lg-5 mt-4">
             <div class="about-text">
               <h2><span class="text-warning"></span></h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias excepturi culpa iusto a pariatur. Ullam inventore ea, odio tempora itaque rem mollitia. Nesciunt quo tempora maiores dolorem beatae quisquam, ipsa voluptatem modi nam laborum optio laboriosam amet non quibusdam explicabo delectus nulla harum et velit unde sunt adipisci! Optio, fugiat!</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias excepturi culpa iusto a pariatur. Ullam inventore ea, odio tempora itaque rem mollitia. Nesciunt quo tempora maiores dolorem beatae quisquam, ipsa voluptatem modi nam laborum optio laboriosam amet non quibusdam explicabo delectus nulla harum et velit unde sunt adipisci! Optio, fugiat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, sed? Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cumque optio minus.</p>
               <a href="#" class="btn btn-warning">Learn More</a>
             </div>
           </div>
@@ -123,7 +129,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12 col-md-12 col-lg-4">
+          <div class="col-12 col-md-12 col-lg-4 mb-4">
             <div class="card text-white text-center bg-dark pb-2">
               <div class="card-body">
                 <i class="bi bi-subtract"></i>
@@ -133,7 +139,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-12 col-lg-4">
+          <div class="col-12 col-md-12 col-lg-4 mb-4">
             <div class="card text-white text-center bg-dark pb-1">
               <div class="card-body">
                 <i class="bi bi-slack"></i>
@@ -143,7 +149,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-12 col-lg-4">
+          <div class="col-12 col-md-12 col-lg-4 mb-4">
             <div class="card text-white text-center bg-dark pb-2">
               <div class="card-body">
                 <i class="bi bi-playstation"></i>
@@ -171,38 +177,74 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12 col-md-12 col-lg-4">
+          <div class="col-12 col-md-12 col-lg-4 mb-4">
             <div class="card text-center bg-white pb-2">
               <div class="card-body text-dark">
                 <div class="img-area mb-4">
                   <img src="../Image/project01.jpg" alt="" class="img-fluid">
                 </div>
                 <h3 class="card-title">Building Make</h3>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error excepturi quos dolor repellat consequuntur nobis facere, reiciendis voluptates fugiat alias.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error excepturi quos dolor repellat consequuntur nobis facere, reiciendis voluptates fugiat alias.</p>
                 <button class="btn btn-warning text-dark">Learn More</button>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-12 col-lg-4">
+          <div class="col-12 col-md-12 col-lg-4 mb-4">
             <div class="card text-center bg-white pb-2">
               <div class="card-body text-dark">
                 <div class="img-area mb-4">
                   <img src="../Image/project02.jpg" alt="" class="img-fluid">
                 </div>
-                <h3 class="card-title">House Make</h3>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error excepturi quos dolor repellat consequuntur nobis facere, reiciendis voluptates fugiat alias.</p>
+                <h3 class="card-title">House Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error excepturi quos dolor repellat consequuntur nobis facere, reiciendis voluptates fugiat alias.</p>
                 <button class="btn btn-warning text-dark">Learn More</button>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-12 col-lg-4">
+          <div class="col-12 col-md-12 col-lg-4 mb-4">
             <div class="card text-center bg-white pb-2">
               <div class="card-body text-dark">
                 <div class="img-area mb-4">
                   <img src="../Image/project03.jpg" alt="" class="img-fluid">
                 </div>
                 <h3 class="card-title">Bridge Make</h3>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error excepturi quos dolor repellat consequuntur nobis facere, reiciendis voluptates fugiat alias.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error excepturi quos dolor repellat consequuntur nobis facere, reiciendis voluptates fugiat alias.</p>
+                <button class="btn btn-warning text-dark">Learn More</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-12 col-lg-4 mb-4">
+            <div class="card text-center bg-white pb-2">
+              <div class="card-body text-dark">
+                <div class="img-area mb-4">
+                  <img src="../Image/project04.jpg" alt="" class="img-fluid">
+                </div>
+                <h3 class="card-title">House Make</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error excepturi quos dolor repellat consequuntur nobis facere, reiciendis voluptates fugiat alias.</p>
+                <button class="btn btn-warning text-dark">Learn More</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-12 col-lg-4 mb-4">
+            <div class="card text-center bg-white pb-2">
+              <div class="card-body text-dark">
+                <div class="img-area mb-4">
+                  <img src="../Image/project05.jpg" alt="" class="img-fluid">
+                </div>
+                <h3 class="card-title">Mosque Make</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error excepturi quos dolor repellat consequuntur nobis facere, reiciendis voluptates fugiat alias.</p>
+                <button class="btn btn-warning text-dark">Learn More</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-12 col-lg-4 mb-4">
+            <div class="card text-center bg-white pb-2">
+              <div class="card-body text-dark">
+                <div class="img-area mb-4">
+                  <img src="../Image/project06.jpg" alt="" class="img-fluid">
+                </div>
+                <h3 class="card-title">Mosque Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error excepturi quos dolor repellat consequuntur nobis facere, reiciendis voluptates fugiat alias.</p>
                 <button class="btn btn-warning text-dark">Learn More</button>
               </div>
             </div>
@@ -307,7 +349,7 @@
           </div>
         </div>
         <div class="row m-0">
-          <div class="col-md-12 p-0 pt-4 p-4 m-auto">
+          <div class="col-md-12 col-lg-6 p-0 pt-4 p-4 m-auto">
             <form action="#" class="bg-light p-4 m-auto">
               <div class="row">
                 <div class="col-md-12">
@@ -329,17 +371,61 @@
               </div>
             </form>
           </div>
+          <div class="col-md-12 col-lg-6  p-0 pt-4 p-4 m-auto">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d118830.36310545262!2d92.002902!3d21.45089815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30adc7ea2ab928c3%3A0x3b539e0a68970810!2sCox&#39;s%20Bazar!5e0!3m2!1sen!2sbd!4v1676801186739!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
         </div>
       </div>
     </section>
     <!--CONTACT SECTION END  -->
 
     <!--FOOTER SECTION START  -->
-    <footer class="bg-dark p-2 text-center">
-      <p class="text-white">All Right Reserved @Sariot hossain </p>
-    </footer>
+          <section class=" footer-section">
+            <div class="container">
+              <div class="row  m-auto mb-3">
+                <div class="col-md-6 col-lg-3 col-sm-12">
+                    <h3>ELEMENTOR</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, laborum.</p>
+                    <div class="share">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 col-sm-12 ">
+                    <h3>contact info</h3>
+                    <div class="d-flex flex-column">
+                      <a href="#"><i class="fas fa-phone"></i>++0188128627983</a>
+                    <a href="#"><i class="fas fa-envelope"></i>elementorinfo@gmail.com</a>
+                    <a href="#"><i class="fas fa-map-marker-alt"></i>cox's bazar</a>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 col-sm-12">
+                    <h3>contact info</h3>
+                    <div class="d-flex flex-column">
+                    <a href="#"><i class="fas fa-arrow-right"></i>Home</a>
+                    <a href="#"><i class="fas fa-arrow-right"></i>About Us</a>
+                    <a href="#"><i class="fas fa-arrow-right"></i>Services</a>
+                    <a href="#"><i class="fas fa-arrow-right"></i>Portfolio</a>
+                    <a href="#"><i class="fas fa-arrow-right"></i>Team</a>
+                    <a href="#"><i class="fas fa-arrow-right"></i>Conteact</a>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 col-sm-12">
+                    <h3>newsletter</h3>
+                    <div class="d-flex flex-column">
+                      <p>subscribe for latest update</p>
+                    <input type="email" placeholder="your email" class="mb-2">
+                    <input type="submit" value="subscribe" class="btn btn-warning">
+                    <img src="./Image/payment.png" alt="payment">
+                    </div>
+                </div>
+            </div>
+            </div>
+            <p class="text-white bg-dark p-2 text-center">create by <span class="text-warning">sariot hossain</span> | all rights reserved</p>
+          </section>
     <!--FOOTER SECTION END  -->
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
